--- a/app/src/main/res/layout/activity_fashion.xml
+++ b/app/src/main/res/layout/activity_fashion.xml
@@ -6,4 +6,92 @@
     android:layout_height="match_parent"
     tools:context=".Fashion">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/fashion"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:layout_marginTop="-100dp"
+            android:contentDescription="@string/app_name"
+            />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:src="@drawable/fashion"
+            android:layout_marginTop="-100dp"
+            android:contentDescription="@string/app_name"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/fashion"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:layout_marginTop="100dp"
+            android:contentDescription="@string/app_name"
+            />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:src="@drawable/fashion"
+            android:layout_marginTop="100dp"
+            android:contentDescription="@string/app_name"
+            />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/fashion"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:layout_marginTop="300dp"
+            android:contentDescription="@string/app_name"
+            />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:src="@drawable/fashion"
+            android:layout_marginTop="300dp"
+            android:contentDescription="@string/app_name"
+            />
+
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
