Added an adapter and intent to connect screens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/RestaurantButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/fashion"
