--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -4,34 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fashion">
+    tools:context=".FashionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="2"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/fashion"
-            android:layout_weight="1"
-            android:padding="20dp"
             android:layout_marginTop="-100dp"
+            android:layout_weight="1"
             android:contentDescription="@string/app_name"
-            />
+            android:padding="20dp"
+            android:src="@drawable/fashion" />
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="20dp"
-            android:src="@drawable/fashion"
             android:layout_marginTop="-100dp"
+            android:layout_weight="1"
             android:contentDescription="@string/app_name"
+            android:padding="20dp"
+            android:src="@drawable/fashion" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:layout_weight="1"
+            android:text="@string/suits"
+            android:padding="20dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:layout_weight="1"
+            android:text="@string/suits"
+            android:padding="20dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            />
+
     </LinearLayout>
 
     <LinearLayout
@@ -93,5 +126,4 @@
 
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
