--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -46,7 +46,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="125dp"
             android:layout_weight="1"
             android:text="@string/suits"
             android:padding="20dp"
@@ -57,7 +57,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="125dp"
             android:layout_weight="1"
             android:text="@string/suits"
             android:padding="20dp"
@@ -66,7 +66,40 @@
             />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/SuitsButton"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="175dp"
+            android:layout_weight="1"
+            android:text="@string/Buy"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginStart="20dp"
+            />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="175dp"
+            android:layout_weight="1"
+            android:text="@string/Buy"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginEnd="50dp"
+            />
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
