--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -27,11 +27,11 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-100dp"
+            android:layout_marginTop="-120dp"
             android:layout_weight="1"
             android:contentDescription="@string/app_name"
             android:padding="20dp"
-            android:src="@drawable/fashion" />
+            android:src="@drawable/shoes" />
 
     </LinearLayout>
     <LinearLayout
@@ -111,10 +111,10 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/fashion"
+            android:src="@drawable/nikes1"
             android:layout_weight="1"
             android:padding="20dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="90dp"
             android:contentDescription="@string/app_name"
             />
 
@@ -122,9 +122,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="20dp"
-            android:src="@drawable/fashion"
-            android:layout_marginTop="100dp"
+            android:padding="50dp"
+            android:src="@drawable/shorts"
+            android:layout_marginTop="20dp"
             android:contentDescription="@string/app_name"
             />
 
@@ -204,7 +204,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/fashion"
+            android:src="@drawable/tshirt"
             android:layout_weight="1"
             android:padding="20dp"
             android:layout_marginTop="300dp"
@@ -216,8 +216,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="20dp"
-            android:src="@drawable/fashion"
-            android:layout_marginTop="300dp"
+            android:src="@drawable/jeans"
+            android:layout_marginTop="270dp"
             android:contentDescription="@string/app_name"
             />
     </LinearLayout>
@@ -244,7 +244,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="525dp"
+            android:layout_marginTop="535dp"
             android:layout_weight="1"
             android:text="Ksh 700"
             android:padding="20dp"
@@ -277,7 +277,7 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="570dp"
+            android:layout_marginTop="580dp"
             android:layout_weight="1"
             android:text="@string/Buy"
             android:textColor="@color/black"
