--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -216,8 +216,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="20dp"
-            android:src="@drawable/jeans"
-            android:layout_marginTop="270dp"
+            android:src="@drawable/jeans1"
+            android:layout_marginTop="300dp"
             android:contentDescription="@string/app_name"
             />
     </LinearLayout>
