--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -92,6 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="175dp"
+            android:id="@+id/ShoesButton"
             android:layout_weight="1"
             android:text="@string/Buy"
             android:textColor="@color/black"
@@ -174,6 +175,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="370dp"
+            android:id="@+id/nikeButton"
             android:layout_weight="1"
             android:text="@string/Buy"
             android:textColor="@color/black"
@@ -186,6 +188,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="370dp"
+            android:id="@+id/shortsButton"
             android:layout_weight="1"
             android:text="@string/Buy"
             android:textColor="@color/black"
@@ -244,7 +247,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="535dp"
+            android:layout_marginTop="525dp"
             android:layout_weight="1"
             android:text="Ksh 700"
             android:padding="20dp"
@@ -266,6 +269,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="570dp"
+            android:id="@+id/tshirtButton"
             android:layout_weight="1"
             android:text="@string/Buy"
             android:textColor="@color/black"
@@ -277,7 +281,8 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="580dp"
+            android:layout_marginTop="570dp"
+            android:id="@+id/jeansButton"
             android:layout_weight="1"
             android:text="@string/Buy"
             android:textColor="@color/black"
