--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -10,6 +10,9 @@
         android:layout_height="wrap_content"
         android:text="Foods "
         android:id="@+id/locationTextView"
+        android:padding="15dp"
+        android:textSize="30sp"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true" />
 
     <ListView
@@ -21,3 +24,12 @@
         android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
+
+
+
+
+
+
+
+
+
