--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -51,7 +51,8 @@
             android:text="@string/suits"
             android:padding="20dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-black"
             />
 
         <TextView
@@ -62,7 +63,8 @@
             android:text="Ksh 5500"
             android:padding="20dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-black"
             />
 
     </LinearLayout>
@@ -147,7 +149,8 @@
             android:text="Ksh 1700"
             android:padding="20dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-black"
             />
 
         <TextView
@@ -157,8 +160,9 @@
             android:layout_weight="1"
             android:text="Ksh 1300"
             android:padding="20dp"
+            android:fontFamily="sans-serif-black"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
             />
 
     </LinearLayout>
@@ -241,18 +245,20 @@
             android:text="Ksh 500"
             android:padding="20dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-black"
             />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="525dp"
+            android:fontFamily="sans-serif-black"
             android:layout_weight="1"
             android:text="Ksh 700"
             android:padding="20dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
             />
 
     </LinearLayout>
@@ -273,7 +279,7 @@
             android:layout_weight="1"
             android:text="@string/Buy"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:layout_marginEnd="70dp"
             android:layout_marginStart="20dp"
             />
