Created intent to pass data between activities

--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -7,10 +7,12 @@
     tools:context=".DeliveryActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/MyLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="location"
+        android:text="Your location is:"
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.468"
