--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -24,6 +24,8 @@
             android:padding="20dp"
             android:src="@drawable/fashion" />
 
+
+
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -34,6 +36,17 @@
             android:src="@drawable/shoes" />
 
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -109,6 +122,40 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="215dp"
+            android:layout_weight="1"
+            android:text="tweet"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginStart="20dp"
+            />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="215dp"
+            android:layout_weight="1"
+            android:text="tweet"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginEnd="50dp"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="2"
         >
 
         <ImageView
@@ -117,7 +164,7 @@
             android:src="@drawable/nikes1"
             android:layout_weight="1"
             android:padding="20dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="130dp"
             android:contentDescription="@string/app_name"
             />
 
@@ -127,7 +174,7 @@
             android:layout_weight="1"
             android:padding="50dp"
             android:src="@drawable/shorts"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="60dp"
             android:contentDescription="@string/app_name"
             />
 
@@ -144,7 +191,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="325dp"
+            android:layout_marginTop="365dp"
             android:layout_weight="1"
             android:text="Ksh 1700"
             android:padding="20dp"
@@ -156,7 +203,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="325dp"
+            android:layout_marginTop="365dp"
             android:layout_weight="1"
             android:text="Ksh 1300"
             android:padding="20dp"
@@ -178,7 +225,7 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="370dp"
+            android:layout_marginTop="410dp"
             android:id="@+id/nikeButton"
             android:layout_weight="1"
             android:text="@string/Buy"
@@ -191,7 +238,7 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="370dp"
+            android:layout_marginTop="410dp"
             android:id="@+id/shortsButton"
             android:layout_weight="1"
             android:text="@string/Buy"
@@ -201,6 +248,7 @@
             />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -214,7 +262,7 @@
             android:src="@drawable/tshirt"
             android:layout_weight="1"
             android:padding="20dp"
-            android:layout_marginTop="300dp"
+            android:layout_marginTop="360dp"
             android:contentDescription="@string/app_name"
             />
 
@@ -224,7 +272,7 @@
             android:layout_weight="1"
             android:padding="20dp"
             android:src="@drawable/jeans1"
-            android:layout_marginTop="300dp"
+            android:layout_marginTop="360dp"
             android:contentDescription="@string/app_name"
             />
     </LinearLayout>
@@ -240,7 +288,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="525dp"
+            android:layout_marginTop="575dp"
             android:layout_weight="1"
             android:text="Ksh 500"
             android:padding="20dp"
@@ -252,7 +300,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="525dp"
+            android:layout_marginTop="575dp"
             android:fontFamily="sans-serif-black"
             android:layout_weight="1"
             android:text="Ksh 700"
@@ -274,7 +322,7 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="570dp"
+            android:layout_marginTop="620dp"
             android:id="@+id/tshirtButton"
             android:layout_weight="1"
             android:text="@string/Buy"
@@ -287,7 +335,7 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="570dp"
+            android:layout_marginTop="620dp"
             android:id="@+id/jeansButton"
             android:layout_weight="1"
             android:text="@string/Buy"
