--- a/app/src/main/res/layout/activity_fashion2.xml
+++ b/app/src/main/res/layout/activity_fashion2.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -127,6 +127,7 @@
 
 
         <Button
+            android:id="@+id/tweet1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="215dp"
@@ -139,6 +140,7 @@
             />
 
         <Button
+            android:id="@+id/tweet2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="215dp"
