--- a/app/src/main/res/layout/my_rows.xml
+++ b/app/src/main/res/layout/my_rows.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".FashionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="2"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,29 +19,17 @@
             android:id="@+id/images"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-100dp"
+            android:layout_marginTop="-130dp"
             android:layout_weight="1"
             android:contentDescription="@string/app_name"
             android:padding="20dp"
             android:src="@drawable/fashion" />
 
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
         <TextView
             android:id="@+id/Text1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="125dp"
+            android:layout_marginTop="-10dp"
             android:layout_weight="1"
             android:text="@string/suits"
             android:padding="20dp"
@@ -50,9 +38,18 @@
             android:fontFamily="sans-serif-black"
             />
 
-
-
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -65,16 +62,27 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="175dp"
-            android:id="@+id/SuitsButton"
+            android:layout_marginTop="135dp"
+            android:id="@+id/buy"
             android:layout_weight="1"
-            android:text="@string/Buy"
+            android:text="buy"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:layout_marginEnd="70dp"
             android:layout_marginStart="20dp"
             />
 
+        <Button
+            android:id="@+id/tweet"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="135dp"
+            android:layout_weight="1"
+            android:text="tweet"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginEnd="50dp"
+            />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
