--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,21 +15,9 @@
         android:padding="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        <EditText
-            android:id="@+id/nameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/white"
-            android:hint="Name"
-            android:inputType="textEmailAddress"
-            android:nextFocusDown="@+id/passwordEditText"
-            android:padding="10dp"
-            android:textColor="@android:color/black"
-            android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/emailEditText"
+            android:id="@+id/emailText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -42,7 +30,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/passwordEditText"
+            android:id="@+id/passwordText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
@@ -54,7 +42,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/confirmPasswordEditText"
+            android:id="@+id/confirmPasswordText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
@@ -66,15 +54,15 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/passwordLoginButton"
+            android:id="@+id/regiserUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:padding="10dp"
-            android:text="Log in" />
+            android:text="Register" />
 
         <TextView
-            android:id="@+id/registerTextView"
+            android:id="@+id/LoginView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
